# digikam-kdeconnect-plugin

./: CMakeLists.txt  README.md
kdeconnect/: CMakeLists.txt  kdeconnectplugin.cpp  kdeconnectplugin.h  kdeconnectwindow.cpp  kdeconnectwindow.h
kdeconnect/i18n/: it.ts
